spacing fix

--- a/pages/sildenafil-s2/styles.module.scss
+++ b/pages/sildenafil-s2/styles.module.scss
@@ -74,7 +74,9 @@
   .headerTextContainer {
     width: 50%;
     padding: 3rem;
-
+    .shopNow {
+      margin-bottom: 0.4rem;
+    }
     @media (max-width: "770px") {
       padding: 0px;
       margin-top: 10px;
@@ -169,7 +171,8 @@
       justify-content: space-between;
 
       margin-left: 0.6rem;
-      margin-top: 1.3rem;
+      margin-top: 2.3rem;
+      margin-bottom: 1rem;
       @media (max-width: "770px") {
         width: 90%;
         margin: auto;
